# llvm-project

openmp/: CMakeLists.txt  README.rst
openmp/libompd/: CMakeLists.txt
openmp/libompd/gdb-plugin/: CMakeLists.txt  __init__.py.in  ompdModule.c  setup.py  test_callbacks.c
openmp/libompd/gdb-plugin/ompd/: frame_filter.py  ompd.py  ompd_address_space.py  ompd_handles.py
openmp/libompd/gdb-wrapper/: CMakeLists.txt
openmp/libompd/src/: CMakeLists.txt  Debug.cpp  Debug.h  TargetValue.cpp  TargetValue.h  omp-debug.cpp  omp-debug.h  omp-icv.cpp  omp-state.cpp  ompd-private.h  ompd-types.h  ompd_test.c  ompd_test.h
openmp/libompd/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  ompt_plugin.h
openmp/libompd/test/openmp_examples/: CMakeLists.txt  example_1.c  example_2.c  example_3.c  example_4.c  example_5.c  example_task.c  fibonacci.c  nested.c  parallel.c
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/deviceRTLs/amdgcn/: CMakeLists.txt
openmp/libomptarget/deviceRTLs/common/: ompd-specific.h  omptarget.h
openmp/libomptarget/deviceRTLs/common/src/: loop.cu  ompd-specific.cu  omptarget.cu  parallel.cu  reduction.cu
openmp/libomptarget/deviceRTLs/nvptx/: CMakeLists.txt
openmp/libomptarget/include/: omptarget.h
openmp/libomptarget/plugins/cuda/: CMakeLists.txt
openmp/libomptarget/plugins/cuda/src/: rtl.cpp
openmp/libomptarget/plugins/generic-elf-64bit/src/: rtl.cpp
openmp/libomptarget/src/: api.cpp  device.cpp  device.h  exports  interface.cpp  omptarget.cpp  private.h  rtl.cpp
openmp/runtime/: CMakeLists.txt
openmp/runtime/src/: CMakeLists.txt  kmp.h  kmp_csupport.cpp  kmp_gsupport.cpp  kmp_os.h  kmp_runtime.cpp  kmp_settings.cpp  kmp_tasking.cpp  kmp_wait_release.h  ompd-specific.cpp  ompd-specific.h  ompt-general.cpp  ompt-internal.h  ompt-specific.cpp  ompt-specific.h
openmp/runtime/test/ompt/misc/: interoperability.cpp
